--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-dom": "^16.13.1",
     "react-file-viewer": "^1.2.1",
     "react-hot-loader": "^4.12.20",
+    "react-infinite-scroll-component": "^5.0.5",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "regenerator-runtime": "^0.13.3",
