added crypto spot

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/superagent": "^4.1.7",
     "better-sqlite3": "^5.4.3",
     "body-parser": "^1.19.0",
+    "coingecko-api": "^1.0.10",
     "core-js": "^3.2.1",
     "cron": "^1.7.2",
     "express": "^4.17.1",
@@ -45,7 +46,7 @@
     "kefir": "^3.8.6",
     "lightning-client": "^0.5.2-beta.8",
     "linkifyjs": "^2.1.8",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.19",
     "markdown-to-jsx": "^6.11.4",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
