added rollsafe membrane / shitposting box that shows cards with 0 hodls & has button to purge unheld cards. switched components to context. inject context at root task component. optimized a few rerenders using performance tools. Esc closes search box.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/ramda": "^0.27.3",
     "@types/socket.io": "^2.1.4",
     "@types/superagent": "^4.1.7",
+    "@welldone-software/why-did-you-render": "^4.3.0",
     "better-sqlite3": "^5.4.3",
     "body-parser": "^1.19.0",
     "coingecko-api": "^1.0.10",
