--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "express": "^4.17.1",
     "file-type": "^14.4.0",
     "hammerjs": "^2.0.8",
+    "immutability-helper": "^3.1.1",
     "kefir": "^3.8.6",
     "lightning-client": "^0.5.2-beta.8",
     "linkifyjs": "^2.1.8",
