--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "repository": "github.com/AutonomousOrganization",
   "license": "GPL-3.0",
   "scripts": {
-    "webdev": "webpack-dev-server --mode development --hot --progress --colors --port 3000 --open",
+    "dev": "webpack-dev-server --mode development --hot --progress --colors --port 3000 --open",
     "webpack": "webpack -p --progress --colors --max_old_space_size=12000",
-    "start": "run-p webdev server",
+    "start": "run-p dev server",
     "server": "node src/server/app.js",
     "format": "prettier --write '{src,test}/**/*.{js,jsx,ts,tsx}'",
     "precommit": "lint-staged",
