--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "GPL-3.0",
   "scripts": {
     "dev": "webpack-dev-server --mode development --hot --progress --colors --port 3000 --open",
-    "webpack": "webpack -p --progress --colors --max_old_space_size=12000",
+    "webpack": "webpack -p --progress --colors --max_old_space_size=8192",
     "start": "run-p dev server",
     "server": "node src/server/app.js",
     "format": "prettier --write '{src,test}/**/*.{js,jsx,ts,tsx}'",
@@ -68,6 +68,7 @@
     "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.12.20",
     "react-infinite-scroll-component": "^5.0.5",
+    "react-jitsi": "^1.0.4",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "regenerator-runtime": "^0.13.3",
