--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   ao:
     build: .
-    container_name: ao
+    container_name: ao_react
     command: bash
     tty: true
     stdin_open: true
