--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "moment": "^2.24.0",
+    "multer": "^1.4.2",
     "node-sass": "^4.14.1",
     "npm-run-all": "^4.1.5",
     "path-match": "^1.2.4",
