--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "react-jitsi": "^1.0.4",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
-    "react-user-tour": "^3.0.0",
+    "react-shepherd": "^3.3.0",
     "regenerator-runtime": "^0.13.3",
     "sass-loader": "^8.0.2",
     "socket.io": "^2.3.0",
@@ -81,6 +81,7 @@
     "superagent": "^5.2.1",
     "switch-path": "^1.2.0",
     "tor-request": "^3.1.0",
+    "web3-utils": "^1.3.0",
     "webpack-manifest-plugin": "^2.2.0",
     "xmlhttprequest": "^1.8.0",
     "yargs": "^15.3.1"
