--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "GPL-3.0",
   "scripts": {
     "dev": "webpack-dev-server --mode development --hot --progress --colors --port 3000 --open",
-    "webpack": "webpack -p --progress --colors --max_old_space_size=8192",
+    "webpack": "NODE_OPTIONS=--max-old-space-size=8192 webpack --progress --color",
     "start": "run-p dev server",
     "server": "node src/server/app.js",
     "format": "prettier --write '{src,test}/**/*.{js,jsx,ts,tsx}'",
