--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "coingecko-api": "^1.0.10",
     "core-js": "^3.2.1",
     "cron": "^1.7.2",
+    "data-uri-to-buffer": "^3.0.1",
     "express": "^4.17.1",
     "file-type": "^14.4.0",
     "hammerjs": "^2.0.8",
@@ -74,6 +75,7 @@
     "react-router-dom": "^5.1.2",
     "react-shepherd": "^3.3.0",
     "regenerator-runtime": "^0.13.3",
+    "render-media": "^4.0.1",
     "sass-loader": "^8.0.2",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
