--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "linkifyjs": "^2.1.8",
     "lodash": "^4.17.19",
     "markdown-to-jsx": "^6.11.4",
+    "mime-types": "^2.1.27",
     "mobx": "^5.15.4",
     "mobx-react": "^6.2.2",
     "moment": "^2.24.0",
