--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "react-file-viewer": "^1.2.1",
     "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.12.20",
-    "react-infinite-scroll-component": "^5.0.5",
+    "react-infinite-scroller": "^1.2.4",
     "react-jitsi": "^1.0.4",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
