--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "AutonomousOrganization",
+  "type": "module",
   "version": "0.1.0",
   "repository": "github.com/AutonomousOrganization",
   "license": "GPL-3.0",
@@ -28,47 +29,49 @@
   },
   "main": "production/server/app.js",
   "dependencies": {
-    "@hot-loader/react-dom": "^16.10.2",
+    "@hot-loader/react-dom": "^16.14.0",
     "@material-ui/core": "^4.11.0",
     "@material-ui/lab": "^4.0.0-alpha.56",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.0",
     "@tippyjs/react": "^4.0.2",
     "@types/lodash": "^4.14.149",
-    "@types/socket.io": "^2.1.4",
+    "@types/socket.io": "^3.0.2",
     "@types/superagent": "^4.1.7",
-    "@welldone-software/why-did-you-render": "^4.3.0",
-    "better-sqlite3": "^5.4.3",
-    "bitcoin-core": "^3.0.0",
+    "@welldone-software/why-did-you-render": "^6.2.0",
+    "better-sqlite3": "^7.4.3",
+    "bitcoin-core": "^1.2.0",
     "body-parser": "^1.19.0",
     "coingecko-api": "^1.0.10",
     "core-js": "^3.2.1",
     "cron": "^1.7.2",
+    "crypto-es": "^1.2.7",
     "data-uri-to-buffer": "^3.0.1",
     "express": "^4.17.1",
-    "file-type": "^14.4.0",
+    "file-type": "^16.5.2",
     "hammerjs": "^2.0.8",
+    "https-browserify": "^1.0.0",
     "immutability-helper": "^3.1.1",
     "kefir": "^3.8.6",
     "lightning-client": "^0.5.2-beta.8",
-    "linkifyjs": "^2.1.8",
+    "linkifyjs": "^3.0.0-beta.3",
     "lodash": "^4.17.19",
-    "markdown-to-jsx": "^6.11.4",
-    "mime-types": "^2.1.27",
-    "mobx": "^5.15.4",
-    "mobx-react": "^6.2.2",
+    "markdown-to-jsx": "^7.1.3",
+    "mobx": "^6.3.2",
+    "mobx-react": "^7.2.0",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
-    "node-sass": "^4.14.1",
+    "node-polyfill-webpack-plugin": "^1.1.4",
+    "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "path-match": "^1.2.4",
-    "propagating-hammerjs": "^1.4.7",
+    "propagating-hammerjs": "^2.0.1",
     "qrcode-generator": "^1.4.4",
     "ramda": "^0.27.0",
-    "react": "^16.13.1",
-    "react-datepicker": "^2.14.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.6.3",
+    "react-datepicker": "^4.1.1",
+    "react-dom": "^16.14.0",
     "react-file-viewer": "^1.2.1",
     "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.12.20",
@@ -79,63 +82,64 @@
     "react-shepherd": "^3.3.0",
     "regenerator-runtime": "^0.13.3",
     "render-media": "^4.0.1",
-    "sass-loader": "^8.0.2",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0",
+    "sass-loader": "12.1.0",
+    "socket.io": "^4.1.3",
+    "socket.io-client": "^4.1.3",
     "socketio-auth": "^0.1.1",
-    "superagent": "^5.2.1",
+    "superagent": "^6.1.0",
     "switch-path": "^1.2.0",
     "tor-request": "^3.1.0",
     "web3-utils": "^1.3.0",
-    "webpack-manifest-plugin": "^2.2.0",
+    "webpack-manifest-plugin": "^3.1.1",
     "xmlhttprequest": "^1.8.0",
-    "yargs": "^15.3.1"
+    "yargs": "^17.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
+    "@babel/core": "^7.14.8",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-decorators": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.6.0",
+    "@babel/register": "^7.14.5",
     "@types/classnames": "^2.2.7",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^13.9.2",
-    "@types/react": "^16.9.2",
-    "@types/react-dom": "^16.9.0",
-    "@types/webpack": "^4.4.23",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
+    "@types/mocha": "^8.2.3",
+    "@types/node": "^16.4.0",
+    "@types/react": "^17.0.14",
+    "@types/react-dom": "^17.0.9",
+    "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^4.28.4",
+    "@typescript-eslint/parser": "^4.28.4",
     "babel-loader": "^8.0.6",
     "chai": "^4.2.0",
-    "css-loader": "^2.1.0",
-    "eslint": "^6.8.0",
-    "file-loader": "^3.0.1",
-    "fork-ts-checker-webpack-plugin": "^1.5.0",
-    "html-loader": "^1.0.0-alpha.0",
-    "html-webpack-plugin": "^3.2.0",
-    "husky": "^4.2.3",
-    "mini-css-extract-plugin": "^0.5.0",
-    "mocha": "^7.1.1",
-    "mocha-loader": "^5.0.0",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "css-loader": "^6.2.0",
+    "eslint": "^7.31.0",
+    "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^6.2.12",
+    "html-loader": "^1.0.0",
+    "html-webpack-plugin": "^5.3.2",
+    "husky": "^7.0.1",
+    "mini-css-extract-plugin": "^2.1.0",
+    "mocha": "^8.0.0",
+    "mocha-loader": "^5.1.5",
     "nyc": "^15.0.0",
-    "postcss": "^7.0.13",
-    "postcss-browser-reporter": "^0.5.0",
-    "postcss-import": "^12.0.1",
-    "postcss-loader": "^3.0.0",
+    "postcss": "^8.3.6",
+    "postcss-browser-reporter": "^0.6.0",
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.5.0",
-    "postcss-reporter": "^6.0.1",
-    "postcss-url": "^8.0.0",
-    "prettier": "^1.19.1",
-    "style-loader": "^0.23.1",
-    "svg-url-loader": "^5.0.0",
-    "typescript": "^3.8.3",
-    "url-loader": "^1.1.2",
-    "webpack": "^4.40.2",
+    "postcss-reporter": "^7.0.2",
+    "postcss-url": "^10.1.3",
+    "prettier": "^2.3.2",
+    "style-loader": "^3.2.1",
+    "svg-url-loader": "^7.1.1",
+    "typescript": "^4.3.5",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.0.0",
     "webpack-bundle-size-analyzer": "^3.1.0",
-    "webpack-cleanup-plugin": "^0.5.1",
-    "webpack-cli": "^3.3.8",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "postcss": {
     "plugins": {
