--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "repository": "github.com/AutonomousOrganization",
   "license": "GPL-3.0",
   "scripts": {
-    "dev": "webpack-dev-server --mode development --hot --progress --colors --port 3000 --open",
+    "dev": "webpack serve --mode development --hot --progress --port 3000 --open",
     "webpack": "NODE_OPTIONS=--max-old-space-size=8192 webpack --progress --color",
     "start": "run-p dev server",
-    "server": "node src/server/app.js",
+    "server": "node --experimental-specifier-resolution=node src/server/app.js",
     "format": "prettier --write '{src,test}/**/*.{js,jsx,ts,tsx}'",
     "precommit": "lint-staged",
     "prepush": "lint-staged",
@@ -25,6 +25,11 @@
     ],
     "*.vue": [
       "npm run pretty-view"
+    ]
+  },
+  "browserify": {
+    "transform": [
+      "babelify"
     ]
   },
   "main": "production/server/app.js",
@@ -49,6 +54,7 @@
     "crypto-es": "^1.2.7",
     "data-uri-to-buffer": "^3.0.1",
     "express": "^4.17.1",
+    "file-loader": "^6.2.0",
     "file-type": "^16.5.2",
     "hammerjs": "^2.0.8",
     "https-browserify": "^1.0.0",
@@ -96,8 +102,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/plugin-proposal-decorators": "^7.6.0",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.6.0",
@@ -111,11 +117,11 @@
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
     "babel-loader": "^8.0.6",
+    "babelify": "^10.0.0",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^6.2.0",
     "eslint": "^7.31.0",
-    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.2.12",
     "html-loader": "^1.0.0",
     "html-webpack-plugin": "^5.3.2",
