--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "react-shepherd": "^3.3.0",
     "regenerator-runtime": "^0.13.3",
     "render-media": "^4.0.1",
+    "rsync": "^0.6.1",
     "sass-loader": "12.1.0",
     "socket.io": "^4.1.3",
     "socket.io-client": "^4.1.3",
