--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "bitcoin-core": "^1.2.0",
     "body-parser": "^1.19.0",
     "coingecko-api": "^1.0.10",
+    "cookie-parser": "^1.4.5",
     "core-js": "^3.2.1",
     "cron": "^1.7.2",
     "crypto-es": "^1.2.7",
