added Signal notifications

--- a/package.json
+++ b/package.json
@@ -5,11 +5,11 @@
   "repository": "github.com/AutonomousOrganization",
   "license": "GPL-3.0",
   "scripts": {
-    "dev": "webpack serve --mode development --hot --progress --port 3000 --open",
+    "dev": "webpack serve --mode production --hot --progress --port 3000 --open",
     "devMoreRam": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --progress --port 8003 --open",
-    "webpack": "NODE_OPTIONS=--max-old-space-size=8192 webpack --progress --color",
+    "webpack": "NODE_OPTIONS=--max-old-space-size=8192 webpack --mode=production --progress --color",
     "start": "run-p dev server",
-    "server": "node --experimental-specifier-resolution=node src/server/app.js",
+    "server": "node --experimental-specifier-resolution=node -r dotenv/config src/server/app.js",
     "format": "prettier --write '{src,test}/**/*.{js,jsx,ts,tsx}'",
     "precommit": "lint-staged",
     "prepush": "lint-staged",
@@ -18,7 +18,8 @@
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "verifydb": "node src/verifyDb.js",
     "createAccessKey": "node manage/createPrivateKey.js",
-    "connect": "node manage/connect.js "
+    "connect": "node manage/connect.js ",
+    "registerSignal": "node manage/registerSignal.js"
   },
   "lint-staged": {
     "*.js": [
@@ -41,6 +42,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.0",
+    "@throneless/libsignal-service": "^1.2.1",
     "@tippyjs/react": "^4.0.2",
     "@types/lodash": "^4.14.149",
     "@types/socket.io": "^3.0.2",
@@ -55,6 +57,7 @@
     "cron": "^1.7.2",
     "crypto-es": "^1.2.7",
     "data-uri-to-buffer": "^3.0.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "file-type": "^16.5.2",
@@ -64,12 +67,13 @@
     "kefir": "^3.8.6",
     "lightning-client": "^0.5.2-beta.8",
     "linkifyjs": "^3.0.0-beta.3",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.21",
     "markdown-to-jsx": "^7.1.3",
     "mobx": "^6.3.2",
     "mobx-react": "^7.2.0",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
+    "node-localstorage": "^2.2.1",
     "node-polyfill-webpack-plugin": "^1.1.4",
     "node-sass": "^6.0.1",
     "npm-run-all": "^4.1.5",
@@ -104,10 +108,11 @@
     "yargs": "^17.0.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.14.8",
     "@babel/core": "^7.14.8",
     "@babel/plugin-proposal-class-properties": "^7.14.5",
     "@babel/plugin-proposal-decorators": "^7.14.5",
-    "@babel/preset-env": "^7.6.0",
+    "@babel/preset-env": "^7.15.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.6.0",
     "@babel/register": "^7.14.5",
@@ -119,7 +124,10 @@
     "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
-    "babel-loader": "^8.0.6",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
+    "babel-plugin-lodash": "^3.3.4",
+    "babel-preset-env": "^1.7.0",
     "babelify": "^10.0.0",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
@@ -129,6 +137,7 @@
     "html-loader": "^1.0.0",
     "html-webpack-plugin": "^5.3.2",
     "husky": "^7.0.1",
+    "lodash-webpack-plugin": "^0.11.6",
     "mini-css-extract-plugin": "^2.1.0",
     "mocha": "^8.0.0",
     "mocha-loader": "^5.1.5",
@@ -145,7 +154,8 @@
     "svg-url-loader": "^7.1.1",
     "typescript": "^4.3.5",
     "url-loader": "^4.1.1",
-    "webpack": "^5.46.0",
+    "webpack": "^5.49.0",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-bundle-size-analyzer": "^3.1.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
