--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
     "file-type": "^16.5.3",
+    "get-urls": "^10.0.0",
     "hammerjs": "^2.0.8",
     "https-browserify": "^1.0.0",
     "immutability-helper": "^3.1.1",
@@ -105,7 +106,8 @@
     "web3-utils": "^1.3.0",
     "webpack-manifest-plugin": "^3.1.1",
     "xmlhttprequest": "^1.8.0",
-    "yargs": "^17.0.1"
+    "yargs": "^17.0.1",
+    "youtube-dl-wrap": "^2.1.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.8",
