--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "repository": "github.com/AutonomousOrganization",
   "license": "GPL-3.0",
   "scripts": {
-    "dev": "webpack serve --mode production --hot --progress --port 3000 --open",
-    "devMoreRam": "node --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --progress --port 8003 --open",
+    "dev": "NODE_OPTIONS=--max-old-space-size=8192 webpack serve --mode production --hot --progress --port 3000 --open",
+    "devMoreRam": " --max_old_space_size=4096 node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --progress --port 8003 --open",
     "webpack": "NODE_OPTIONS=--max-old-space-size=8192 webpack --mode=production --progress --color",
     "start": "run-p dev server",
     "server": "node --experimental-specifier-resolution=node -r dotenv/config src/server/app.js",
