--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
   },
   "main": "production/server/app.js",
   "dependencies": {
-    "@hot-loader/react-dom": "^16.14.0",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/lab": "^4.0.0-alpha.56",
+    "@hot-loader/react-dom": "^17.0.1",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.0",
@@ -81,9 +81,9 @@
     "propagating-hammerjs": "^2.0.1",
     "qrcode-generator": "^1.4.4",
     "ramda": "^0.27.0",
-    "react": "^16.6.3",
+    "react": "^17.0.0",
     "react-datepicker": "^4.1.1",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0.0",
     "react-file-viewer": "^1.2.1",
     "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.12.20",
@@ -92,6 +92,7 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-shepherd": "^3.3.0",
+    "react-upload-box": "^1.1.0",
     "regenerator-runtime": "^0.13.3",
     "render-media": "^4.0.1",
     "rsync": "^0.6.1",
@@ -155,7 +156,7 @@
     "svg-url-loader": "^7.1.1",
     "typescript": "^4.3.5",
     "url-loader": "^4.1.1",
-    "webpack": "^5.49.0",
+    "webpack": "^5.52.0",
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-bundle-size-analyzer": "^3.1.0",
     "webpack-cli": "^4.7.2",
