fixed uploads finally maybe

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
     "verifydb": "node src/verifyDb.js",
     "createAccessKey": "node manage/createPrivateKey.js",
-    "connect": "node --experimental-specifier-resolution=node -r dotenv/configmanage/connect.js ",
+    "connect": "node --experimental-specifier-resolution=node -r dotenv/config manage/connect.js ",
     "registerSignal": "node --experimental-specifier-resolution=node -r dotenv/config manage/registerSignal.js"
   },
   "lint-staged": {
