--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "npm-run-all": "^4.1.5",
     "path-match": "^1.2.4",
     "propagating-hammerjs": "^2.0.1",
-    "qrcode-generator": "^1.4.4",
+    "qrcode.react": "^1.0.1",
     "ramda": "^0.27.0",
     "react": "^17.0.0",
     "react-datepicker": "^4.1.1",
@@ -133,7 +133,7 @@
     "babelify": "^10.0.0",
     "chai": "^4.2.0",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "css-loader": "^6.2.0",
+    "css-loader": "^5.0.0",
     "eslint": "^7.31.0",
     "fork-ts-checker-webpack-plugin": "^6.2.12",
     "html-loader": "^1.0.0",
