--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "main": "production/server/app.js",
   "dependencies": {
     "@hot-loader/react-dom": "^17.0.1",
+    "@jitsi/react-sdk": "^1.0.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@testing-library/jest-dom": "^5.14.1",
@@ -91,7 +92,6 @@
     "react-helmet": "^6.1.0",
     "react-hot-loader": "^4.12.20",
     "react-infinite-scroller": "^1.2.4",
-    "react-jitsi": "^1.0.4",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.3",
